# migrate_rustdoc_json

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
deterministic_rustdoc_types/: Cargo.toml  README.md
deterministic_rustdoc_types/src/: args.rs  main.rs
deterministic_rustdoc_types/src/passes/: mod.rs  remove_target.rs  stable_crate_id.rs
migrate_rustdoc_types/: README.md
migrate_rustdoc_types/src/: main.rs  version.rs
migrate_rustdoc_types/src/migrations/: v41.rs
src/: args.rs  macros.rs  main.rs  migrate.rs  primitives.rs  reporter.rs  traits.rs  untyped_crate.rs  version.rs
src/migrate/: macros.rs  mod.rs  primitives.rs  traits.rs
src/migrations/: _41.rs  _42.rs  _43.rs  _44.rs  mod.rs  v41.rs  v42.rs  v43.rs  v44.rs  v45.rs  v46.rs  v47.rs  v48.rs  v49.rs  v50.rs  v51.rs  v52.rs
tests/: migrate.rs
tests/harness/: json.rs  mod.rs
tests/migrations/: v42_to_v43.rs  v43_to_v44.rs  v51_to_v52.rs
tests/utils/: json.rs  mod.rs  toolchains.rs
tests/v42/: v42.rs
tests/v44/: v44.rs
tests/v45/: v45.rs
tests/v46/: v46.rs
tests/v48/: v48.rs
tests/v49/: v49.rs
