[package]
name = "migrate_rustdoc_json"
version = "0.1.0"
authors = ["BD103"]
edition = "2024"
description = "Migrate Rustdoc JSON from one format version to another"
repository = "https://github.com/BD103/migrate_rustdoc_json"
license = "MIT OR Apache-2.0"
keywords = ["rustdoc", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# CLI argument parsing
pico-args = "0.5.0"

# Rustdoc JSON deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error propagation and contexts
anyhow = "1.0.98"

# Colored terminal output
anstream = "0.6.18"
anstyle = "1.0.10"

# Parser combinator for migrating text formats
winnow = "0.7.10"

# All supported `rustdoc_types` format versions
rustdoc_types_41 = { version = "0.37", package = "rustdoc-types", features = ["rustc-hash"] }
rustdoc_types_42 = { version = "0.38", package = "rustdoc-types", features = ["rustc-hash"] }
rustdoc_types_43 = { version = "0.39", package = "rustdoc-types", features = ["rustc-hash"] }
rustdoc_types_44 = { version = "0.40", package = "rustdoc-types", features = ["rustc-hash"] }
rustdoc_types_45 = { version = "0.41", package = "rustdoc-types", features = ["rustc-hash"] }

[dev-dependencies]
# Querying JSON, used for simpler testing
jsonpath-rust = "1.0.2"
