[package]
name = "deterministic_rustdoc_types"
version = "0.1.0"
authors = ["BD103"]
edition = "2024"
description = "Make `rustdoc` JSON deterministic"
repository = "https://github.com/BD103/migrate_rustdoc_types"
license = "MIT OR Apache-2.0"

[dependencies]
# CLI argument parsing
pico-args = "0.5.0"

# `rustdoc` JSON deserialization and queries
serde_json = "1.0.140"
jsonpath-rust = "1.0.2"

# Error propagation and contexts
anyhow = "1.0.98"
